# scripts

./: .hgignore  .hgtags  CHANGELOG.md  COPYING  MANIFEST.in  README  README.md  pyproject.toml  setup.py
scripts/: __init__.py  apt.py  cdblank.py  cdriso.py  cdwrite.py  my_backup.py  pg_backup.py  pkg.py  unpkg.py
