[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "stua",
]

[project]
name = "scripts"
description = "Various linux scripts"
authors = [
    {name = "Raffaele Salmaso", email = "raffaele@salmaso.org"},
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = [
    "version",
]
dependencies = [
    "stua",
]

[project.urls]
"Home Page" = "https://pypi.org/project/scripts/"
Documentation = "https://github.com/rsalmaso/scripts/blob/main/README.md"
GitHub = "https://github.com/rsalmaso/scripts"
Changelog = "https://github.com/rsalmaso/scripts/blob/main/CHANGELOG.md"
"Bug Reports" = "https://github.com/rsalmaso/scripts/discussions"

[project.scripts]
cdblank = "scripts.cdblank:main"
cdriso = "scripts.cdriso:main"
cdwrite = "scripts.cdwrite:main"
my-backup = "scripts.my_backup:main"
pg-backup = "scripts.pg_backup:main"
pkg = "scripts.pkg:main"
unpkg = "scripts.unpkg:main"

[tool.setuptools.dynamic]
version = {attr = "scripts.__version__"}

[tool.setuptools]
packages = ["scripts"]
script-files = ["bin/myip", "bin/pycclean"]

[tool.distutils.bdist_wheel]
universal = false

[tool.ruff]
select = [
    "B", # flake8-bugbear
    "C9", # mccabe
    "DJ", # flake8-django
    "E", # pycodestyle
    "F", # pyflakes
    "I", #
    "W", # pycodestyle

]
ignore = [
    "B904", # Within an except clause, raise exceptions with raise ... from err or raise ... from None to
            # distinguish them from errors in exception handling.
    "E722", # Do not use bare except, specify exception instead
]
fixable = [
    "I",
]
unfixable = [
    "F401", # don't remove unused import
]
line-length = 120
target-version = "py38"

[tool.ruff.flake8-quotes]
inline-quotes = "double"

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.ruff.isort]
combine-as-imports = true
force-sort-within-sections = true
force-wrap-aliases = true
known-third-party = [
    "stua",
]
known-first-party = [
    "scripts",
]
order-by-type = false

[tool.ruff.mccabe]
max-complexity = 18

[tool.ruff.per-file-ignores]
"cdriso.py" = ["F841"]
"pg_backup.py" = ["F504", "F841"]
